--- a/themes/personal/layouts/project/list.html
+++ b/themes/personal/layouts/project/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="margin-large">
+<section class="margin-large margin-medium@m">
     {{.Content}}
 
     <section class="overflow-x-scroll@m margin-large margin-remove-horizontal@m text-nowrap">
