--- a/themes/personal/layouts/project/single.html
+++ b/themes/personal/layouts/project/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="margin-large">
+<section class="margin-large margin-medium@m">
     <section class="flex flex-align-items-center flex-justify-content-center">
         <div>
             <h1 class="text-center">{{ .Title }}</h1>
