--- a/themes/personal/layouts/404.html
+++ b/themes/personal/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="margin-large">
+<section class="margin-large margin-medium@m">
     <section class="flex align-items-center justify-content-center">
         <div class="width-1/1">
             <h1 class="text-center">404</h1>
