--- a/themes/personal/layouts/index.html
+++ b/themes/personal/layouts/index.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="margin-large">
+<section class="margin-large margin-medium@m">
     {{.Content}}
 </section>
 {{ end }}
