--- a/themes/personal/layouts/partials/footer.html
+++ b/themes/personal/layouts/partials/footer.html
@@ -1,3 +1,3 @@
 <footer class="padding-large padding-remove-horizontal">
-    <p class="text-center">© {{ .Site.Params.copyright_years }}. <a href="{{ .Site.Params.site_name }}" target="_blank">{{ .Site.Params.site_name }}</a>. All right reserved.</p>
+    <p class="text-center">© {{ .Site.Params.copyright_years }}. <a href="{{ .Site.Params.site_url }}" target="_blank">{{ .Site.Params.site_name }}</a>. All right reserved.</p>
 </footer>
