Add image lazy loading

--- a/themes/personal/layouts/project/list.html
+++ b/themes/personal/layouts/project/list.html
@@ -19,7 +19,7 @@
                 <a href="/project/{{ lower .Title }}/">
                     <div class="card card-default box-shadow-large box-shadow-none@dark">
                         <div class="card-header padding-remove-horizontal padding-remove-top">
-                            <img src="{{ .Params.project_banner_url }}" class="border-radius-xsmall border-radius-remove-bottom-left border-radius-remove-bottom-right width-1/1">
+                            <img src="{{ .Params.project_banner_url }}" loading="lazy" class="border-radius-xsmall border-radius-remove-bottom-left border-radius-remove-bottom-right width-1/1">
                         </div>
                         <div class="card-body">
                             <h5>{{ .Title }}</h5>
