--- a/themes/personal/layouts/partials/google-analytics.html
+++ b/themes/personal/layouts/partials/google-analytics.html
@@ -1,4 +1,4 @@
-{{- if .Site.IsServer -}}
+{{- if hugo.IsServer -}}
 <!-- Dont add Google analytics to localhost -->
 {{ else }}
     {{ if .Site.Params.google_analytics_id }}
